--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Aba Navegação -->
     <nav id="desktop-nav">
-      <div class="logo">Eduardo Gerhardt</div>
+      <div class="logo">Minha primeira página pessoal</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">Sobre</a></li>
@@ -101,7 +101,7 @@
               Busco constantemente superar o meu eu do passado e avançar em 
               minha trajetória profissional. Estagnar não está presente no meu 
               vocabulário. Gosto de colaborar em equipe, criar novas conexões e 
-              compartilhar conhecimento e experiência sempre que possível. 
+              compartilhar conhecimentos sempre que possível. 
               Sou participativo e tenho uma abordagem crítica e argumentativa. 
               Desenvolver softwares inteligentes e seguros é algo que me entusiasma!
             </p>
@@ -112,8 +112,8 @@
 
     <!-- Gostos Preferidos -->
     <section id="preferences">
-      <p class="section__text__p1">Veja alguns dos meus</p>
-      <h1 class="title">Gostos</h1>
+      <p class="section__text__p1">Um pouco mais</p>
+      <h1 class="title">Sobre mim</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <!-- Time -->
@@ -281,13 +281,6 @@
               <article>
                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
                 <div>
-                  <h3>PHP</h3>
-                  <p>Intermediário</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
-                <div>
                   <h3>JavaScript</h3>
                   <p>Básico</p>
                 </div>
@@ -336,12 +329,12 @@
         <!-- E-mail -->
         <div class="contact-info-container">
           <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon"/>
-          <p><a href="mailto:eduardo.rocha275@gmail.com">eduardo.rocha275@gmail.com</a></p>
+          <p><a href="mailto:comercial.eduardogerhardt@gmail.com">comercial.eduardogerhardt@gmail.com</a></p>
         </div>
         <!-- Linkedin -->
         <div class="contact-info-container">
           <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon"/>
-          <p><a href="https://www.linkedin.com">Eduardo Gerhardt</a></p>
+          <p><a href="https://www.linkedin.com/in/eduardo-gerhardt/">Eduardo Gerhardt</a></p>
         </div>
       </div>
     </section>
